--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm version patch --allow-same-version && react-scripts build",
+    "version": "npm version patch --force",
+    "build": "npm run version && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
