--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "version": "npm version patch --force",
-    "build": "npm run version && react-scripts build",
+    "build": "npm version patch && react-scripts build",    
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
