--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "cors": "^2.8.5",
     "exceljs": "^4.4.0",
+    "express": "^4.21.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.13.0",
-    "typescript": "^4.9.5"
+    "recharts": "^2.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,10 +46,15 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^16.18.114",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-modal": "^3.16.3",
-    "npm-version": "^1.1.0"
+    "npm-version": "^1.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
